Добавлен класс DataTypesToken для определения токена типа даты; добавлен скелет класса операторов Op

--- a/Translator.vcxproj
+++ b/Translator.vcxproj
@@ -127,11 +127,15 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="DataTypesToken.cpp" />
+    <ClCompile Include="Op.cpp" />
     <ClCompile Include="Parser.cpp" />
     <ClCompile Include="Token.cpp" />
     <ClCompile Include="Translator.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="DataTypesToken.h" />
+    <ClInclude Include="Op.h" />
     <ClInclude Include="Parser.h" />
     <ClInclude Include="Token.h" />
   </ItemGroup>
